--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "stencil build --prerender",
+    "build": "stencil build",
     "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
     "devWithSW": "sd concurrent \"stencil build --dev --service-worker --watch\" \"stencil-dev-server\" ",
     "serve": "stencil-dev-server",
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@ionic/core": "0.0.2-29",
-    "@stencil/core": "^0.1.2",
+    "@stencil/core": "^0.1.3",
     "@stencil/router": "latest"
   },
   "devDependencies": {
