--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test.watch": "jest --watch --no-cache"
   },
   "dependencies": {
-    "@ionic/core": "0.0.2-29",
-    "@stencil/core": "^0.1.3",
+    "@ionic/core": "0.0.2-48",
+    "@stencil/core": "0.2.1",
     "@stencil/router": "latest"
   },
   "devDependencies": {
