--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
   },
   "dependencies": {
     "@ionic/core": "4.0.0-alpha.1",
-    "@stencil/core": "^0.7.20",
-    "@stencil/router": "latest",
-    "autoprefixer": "^8.2.0",
-    "micromatch": "^3.1.10"
+    "@stencil/core": "0.7.20"
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
-    "@stencil/sass": "0.0.2",
+    "@stencil/sass": "0.0.3",
     "@stencil/utils": "latest",
-    "@types/jest": "^21.1.1",
-    "jest": "^21.2.1"
+    "@types/jest": "^22.2.2",
+    "jest": "^22.4.3"
   },
   "repository": {
     "type": "git",
