chore(): update to latest

--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "test.watch": "jest --watch --no-cache"
   },
   "dependencies": {
-    "@ionic/core": "^0.1.4",
-    "@stencil/core": "0.7.7",
-    "@stencil/router": "latest"
+    "@ionic/core": "4.0.0-alpha.1",
+    "@stencil/core": "0.7.18"
   },
   "devDependencies": {
     "@stencil/dev-server": "latest",
-    "@stencil/sass": "0.0.2",
+    "@stencil/sass": "0.0.3",
     "@stencil/utils": "latest",
-    "@types/jest": "^21.1.1",
-    "jest": "^21.2.1"
+    "@types/jest": "^22.2.2",
+    "jest": "^22.4.3"
   },
   "repository": {
     "type": "git",
