--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "dependencies": {
     "@ionic/core": "4.0.0-alpha.1",
-    "@stencil/core": "^0.7.18",
+    "@stencil/core": "^0.7.20",
     "@stencil/router": "latest",
+    "autoprefixer": "^8.2.0",
     "micromatch": "^3.1.10"
   },
   "devDependencies": {
