update package details

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@stencil/starter",
+  "name": "@ionic/pwa-toolkit",
   "private": true,
   "version": "0.0.1",
-  "description": "Stencil App Starter",
+  "description": "Ionic PWA Toolkit",
   "files": [
     "dist/"
   ],
@@ -28,14 +28,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/stencil-app-starter.git"
+    "url": "git+https://github.com/ionic-team/ionic-pwa-toolkit.git"
   },
   "author": "Ionic Team",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ionic-team/stencil"
   },
-  "homepage": "https://github.com/ionic-team/stencil",
+  "homepage": "https://github.com/ionic-team/ionic-pwa-toolkit",
   "jest": {
     "transform": {
       "^.+\\.(js|ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
