update npm start script

--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "dev": "stencil build --dev --watch --serve",
     "devWithSW": "stencil build --dev --service-worker --watch --serve",
-    "start": "npm run dev",
+    "start": "stencil build --dev --watch --serve",
     "test": "jest",
     "test.watch": "jest --watch"
   },
