--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "devWithSW": "stencil build --dev --service-worker --watch --serve",
     "start": "stencil build --dev --watch --serve",
+    "start.sw": "npm run start --service-worker",
     "test": "jest",
     "test.watch": "jest --watch"
   },
   "dependencies": {
-    "@ionic/core": "^4.0.0-alpha.12",
-    "@stencil/core": "^0.10.8"
+    "@ionic/core": "4.0.0-beta.0",
+    "@stencil/core": "0.10.9"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
