--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@ionic/core": "4.0.0-beta.0",
-    "@stencil/core": "0.10.9"
+    "@stencil/core": "0.10.9",
+    "@stencil/state-tunnel": "0.0.7"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
