--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test.watch": "stencil test --spec --e2e --watch"
   },
   "dependencies": {
-    "@ionic/core": "4.0.0-beta.12",
-    "@stencil/core": "0.13.2"
+    "@ionic/core": "4.0.0-beta.13",
+    "@stencil/core": "0.14.0-4"
   }
 }
