--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   },
   "dependencies": {
     "@ionic/core": "4.0.0-beta.13",
-    "@stencil/core": "0.14.0-4"
+    "@stencil/core": "0.15.1"
   }
 }
