--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test.watch": "stencil test --spec --e2e --watch"
   },
   "dependencies": {
-    "@ionic/core": "4.0.0-beta.16",
+    "@ionic/core": "4.0.0-beta.16"
+  },
+  "devDependencies": {
     "@stencil/core": "0.15.2"
   }
 }
