--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,11 @@
   "start_url": "/",
   "display": "standalone",
   "icons": [{
-    "src": "assets/icon/icon.png",
+    "src": "assets/icon/icon192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },{
+    "src": "assets/icon/icon512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
