--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test.watch": "stencil test --spec --e2e --watch"
   },
   "dependencies": {
-    "@ionic/core": "4.0.0"
+    "@ionic/core": "^4.0.0"
   },
   "devDependencies": {
     "@stencil/core": "0.17.0"
