--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "test.watch": "stencil test --spec --e2e --watch"
   },
   "dependencies": {
-    "@ionic/core": "^4.0.0"
+    "@ionic/core": "one"
   },
   "devDependencies": {
-    "@stencil/core": "0.17.0"
+    "@stencil/core": "one",
+    "workbox-build": "4.3.1"
   }
 }
