--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@ionic/core": "one"
   },
   "devDependencies": {
-    "@stencil/core": "one",
-    "workbox-build": "4.3.1"
+    "@stencil/core": "1.0.0-beta.5"
   }
 }
