--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "build": "stencil build",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watch"
+    "test.watch": "stencil test --spec --e2e --watch",
+    "generate": "stencil generate"
   },
   "dependencies": {
     "@ionic/core": "^4.7.1"
   },
   "devDependencies": {
-    "@stencil/core": "^1.2.1"
+    "@stencil/core": "^1.3.0"
   }
 }
