--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stencil/core": "^2.0.1",
     "@types/jest": "^26.0.24",
     "@types/puppeteer": "^5.4.4",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "puppeteer": "~10.0.0"
   }
 }
