--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@stencil/core": "^2.0.1",
     "@types/jest": "^26.0.24",
     "jest": "^26.6.3",
-    "puppeteer": "~10.0.0"
+    "puppeteer": "^5.5.0",
+    "@types/puppeteer": "^5.4.3"
   }
 }
