--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "devDependencies": {
     "@ionic/core": "^5.3.2",
-    "@stencil/core": "^2.0.1",
+    "@stencil/core": "^2.7.0",
     "@types/jest": "^26.0.24",
+    "@types/puppeteer": "^5.4.3",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "puppeteer": "^5.5.0",
-    "@types/puppeteer": "^5.4.3"
+    "puppeteer": "^5.5.0"
   }
 }
